--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Closer",
+  "name": "Closer - social Community",
   "icons": [
     {
       "src": "favicon.ico",
